[package]
name = "metro-surf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.0"
bevy_rapier3d = { version = "0.21.0", features = ["debug-render"] }
bevy-tnua = { version = "0.2.2", features = ["rapier_3d"] }
noisy_bevy = "0.3.0"
